# hot-sales-challenge

./: .editorconfig  README.md
order-bot/: .editorconfig  .env-example  go.mod  main.go
order-bot-rs/: .gitignore  Cargo.toml  README.md  config-example.toml
order-bot-rs/src/: config.rs  dto.rs  error.rs  main.rs  result.rs  run.rs  token.rs  workers.rs
orders-api/: .editorconfig  .env-example  .gitignore  biome.json  data-source-example.ts  package-lock.json  package.json
orders-api/migrations/: 1750511043288-initial-tables.ts  1750512114533-initial-seeds.ts  1750555728191-orders-unique-composite.ts  1750579933469-orders-new-indexes.ts
orders-api/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  constants.ts  main.ts
orders-api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
orders-api/src/auth/dto/: id-param.dto.ts
orders-api/src/auth/types/: auth-request.type.ts
orders-api/src/inventory/: inventory.controller.ts  inventory.entity.ts  inventory.module.ts  inventory.service.ts  product.entity.ts  products.service.ts
orders-api/src/inventory/dto/: cached-inventory.dto.ts
orders-api/src/orders/: order.entity.ts  orders.consumer.ts  orders.controller.ts  orders.module.ts  orders.service.ts
orders-api/src/promotions/: promotion.entity.ts  promotions.module.ts  promotions.service.ts
orders-api/src/redis/: redis.module.ts  redis.service.ts
orders-api/src/shared/: service-name.dto.ts
orders-api/src/shared/dto/: message.dto
orders-api/src/tokens/: tokens.module.ts  tokens.service.ts
(+4 files in other folders)
