[package]
name = "order-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
jsonwebtoken = "9.3.1"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.6"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
