[package]
name = "order-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
jsonwebtoken = "9.3.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = "0.8.6"
toml = "0.8.23"
ureq = { version = "3.0.12", features = ["json"] }
